--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browser"
   ],
   "devDependencies": {
-    "browserify": "^10.2.1"
+    "browserify": "^10.2.1",
+    "umd": "^3.0.1"
   }
 }
