--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "prepublish": "umd docCookies $npm_package_main docCookies.js"
+    "prepublish": "umd docCookies $npm_package_main $npm_package_files_0"
   },
   "files": [
     "docCookies.js"
