--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "prepublish": "umd docCookies $npm_package_main $npm_package_files_0"
+    "prepublish": "umd docCookies $npm_package_main $npm_package_files_1"
   },
   "files": [
+    "index.js",
     "docCookies.js"
   ],
   "license": "GPL-3.0",
